# neural_model_theoretic_interpretation_ACL_2026

./: .gitignore  README.md  pyproject.toml
data/: test_set1.csv  test_set2.csv  train_set1.csv  train_set2.csv
metadata/: checkpoint_seeds.json  checkpoints.json  experiments.json
scripts/: mixed_effects.R  mixed_effects_diagnostics.R  mixed_effects_gap_csvs.R  mixed_effects_gap_per_split_csvs.R  mixed_effects_latex.R  mixed_effects_sentence_diagnostics.R  regenerate_all_outputs.sh  regenerate_tex_outputs.sh  run_checkpoint_evaluation.sh  summarize_complexity_breakdown.py  summarize_generalization_gap.py  summarize_mixed_effects_tables.py  summarize_sentence_arch_gap.py  summarize_test_sentence_difficulty_types.R  summarize_word_sentence_disaggregation.py
src/: checkpoints.py  cli.py
statistical_analysis/: results_combined_re_selection.csv  results_gap_basic_event_anova.csv  results_gap_basic_event_arch_pairwise.csv  results_gap_basic_event_arch_pairwise_by_entity.csv  results_gap_basic_event_entity.csv  results_gap_basic_event_entity_by_arch.csv  results_gap_complex_event_anova.csv  results_gap_complex_event_arch_pairwise.csv  results_gap_complex_event_arch_pairwise_by_entity.csv  results_gap_complex_event_entity.csv  results_gap_complex_event_entity_by_arch.csv  results_gap_per_split_basic_event_S1_arch.csv  results_gap_per_split_basic_event_S1_arch_by_entity.csv  results_gap_per_split_basic_event_S1_entity.csv  results_gap_per_split_basic_event_S1_entity_by_arch.csv  results_gap_per_split_basic_event_S2_arch.csv  results_gap_per_split_basic_event_S2_entity.csv  (+102 more)
(+883 files in other folders)
