[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acl-2026-repro"
version = "0.1.0"
description = "Public evaluation and regeneration package for the ACL 2026 paper \"The Learnability of Model-Theoretic Interpretation Functions in Artificial Neural Networks\"."
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Adrian Brasoveanu"},
    {name = "Jakub Dotlacil"},
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "torch>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "checkpoints"]

[tool.setuptools.packages.find]
where = ["src"]
